--- a/Runtime/Kogase.UnitySDK.asmdef
+++ b/Runtime/Kogase.UnitySDK.asmdef
@@ -1,13 +1,15 @@
 {
     "name": "Kogase.UnitySDK",
     "rootNamespace": "Kogase",
-    "references": [],
+    "references": [
+        "Komutil.JsonPlayerPrefs"
+    ],
     "includePlatforms": [],
     "excludePlatforms": [],
     "allowUnsafeCode": false,
     "overrideReferences": false,
     "precompiledReferences": [],
-    "autoReferenced": true,
+    "autoReferenced": false,
     "defineConstraints": [],
     "versionDefines": [],
     "noEngineReferences": false
