fix: remove dependencies for JsonPlayerPrefs

--- a/Runtime/Kogase.UnitySDK.asmdef
+++ b/Runtime/Kogase.UnitySDK.asmdef
@@ -1,9 +1,7 @@
 {
   "name": "Kogase.UnitySDK",
   "rootNamespace": "Kogase",
-  "references": [
-    "Komutil.JsonPlayerPrefs"
-  ],
+  "references": [],
   "includePlatforms": [],
   "excludePlatforms": [],
   "allowUnsafeCode": false,
